--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "typescript": "5.0.2",
+    "world-countries": "^5.0.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.8",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
     "prisma": "^5.8.1",
